Modify group name and demo video link in README
Updated group name and links in README.md